@@ -1,5 +1,10 @@
 2005-04-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* threadpool.c: the epollfd might be closed by another thread at
+	any time, so ignore EBADF at treat it as a "we're closing" sign.
+
+2005-04-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* threadpool.c: release the semaphores with a count equals to the number
 	of working threads in both IO and regular pools. Fixed typo that messed
 	up the count of IO pool threads. Don't initialize the pipe handles if
